--- a/requirements_simple.txt
+++ b/requirements_simple.txt
@@ -5,6 +5,7 @@ openpyxl>=3.1.0
 rapidfuzz>=3.0.0
 numpy>=1.24.0
 xlsxwriter>=3.2.0
+tqdm>=4.64.0
 
 # Optional: Uncomment if you get Arrow serialization errors
 # pyarrow>=10.0.0
