--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,9 @@ rapidfuzz>=3.0.0
 numpy>=1.24.0
 xlsxwriter>=3.2.0
 tqdm>=4.64.0
+scipy>=1.9.0
+plotly>=5.0.0
+matplotlib>=3.5.0
+seaborn>=0.11.0
+fuzzywuzzy>=0.18.0
+python-levenshtein>=0.20.0
